@@ -10,7 +10,7 @@ AM_SANITY_CHECK
 
 AC_CHECK_LIB(m, erf,,[AC_MSG_ERROR("need libm")])
 
-PKG_CHECK_MODULES(DIFXIO, difxio >= 3.4.0)
+PKG_CHECK_MODULES(DIFXIO, difxio >= 3.5.0)
 
 LIBS="${LIBS} ${DIFXIO_LIBS}"
 CFLAGS="-D_LARGE_FILE_SOURCE -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 ${CFLAGS} ${DIFXIO_CFLAGS} "
